apply gcc.widen_types-49x
Problem Statement:
  Locals and temporaries having signed integral types, whose address has
  not been taken, are not volatile qualified, and having type precision
  less than that of type long are widened to type long (with any other
  qualifiers retained).

  Changes under flag '-fwiden-types'

Owned by:
  Edmar Wienskoski

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1465,6 +1465,7 @@ OBJS = \
 	vmsdbgout.o \
 	vtable-verify.o \
 	web.o \
+	widen-types.o \
 	xcoffout.o \
 	$(out_object_file) \
 	$(EXTRA_OBJS) \
